# happy-coding

./: pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
src/core/: db.py
src/core/auth/: register_token_decorator.py  security_service.py  token_payload.py  token_type.py
src/core/config/: config.py  database_configuration.py  mailing_configuration.py  payment_configuration.py
src/core/libs/mailing/: mail_service.py  mailing_type.py  template_builder.py  template_decorator.py  template_factory.py
src/core/libs/mailing/payloads/: auth_pr.py
src/core/libs/mailing/templates/: reset_password.html  welcome_email.html
src/core/libs/paypal/: paypal_builder.py  paypal_interface.py  paypal_service.py  paypal_type.py
src/core/models/: base.py
src/core/services/: base.py
src/modules/: __init__.py
src/modules/auth/: dependencies.py  router.py  schemas.py
src/modules/categories/: models.py  router.py  schemas.py  service.py
src/modules/orders/: models.py  router.py  schemas.py  service.py
src/modules/payments/: models.py  router.py  schemas.py  service.py
src/modules/products/: models.py  router.py  schemas.py  service.py
src/modules/users/: models.py  router.py  schemas.py  service.py
src/tests/: conftest.py
src/tests/modules/categories/: test_router.py
src/tests/modules/orders/: test_router.py
src/tests/modules/products/: test_router.py
