[project]
name = "e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anyio>=3.7.1",
    "bcrypt>=3.2.2,<4.0",
    "beanie>=2.0.0",
    "fastapi==0.104.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.2",
    "pymongo>=4.15.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "twisted>=25.5.0",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=6.1.0",
    "pytest>=8.4.2",
]
